// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GiftWrappingDisplay component should renders correctly props are present 1`] = `
<div
  className=""
  dataLocator="review-shipping-section"
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(TitlePlusEditButton)
        bagLoading={false}
        dataLocator="pickup-section"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(AddressSkelton) />
</div>
`;

exports[`GiftWrappingDisplay component should renders correctly props are present and isexpresscheckout 1`] = `
<div
  className=""
  dataLocator="review-shipping-section"
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(TitlePlusEditButton)
        bagLoading={false}
        dataLocator="pickup-section"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(AddressSkelton) />
</div>
`;

exports[`GiftWrappingDisplay component should renders correctly props not present 1`] = `
<div
  dataLocator="review-shipping-section"
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(TitlePlusEditButton)
        bagLoading={false}
        dataLocator="pickup-section"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(AddressSkelton) />
</div>
`;
